[gd_scene load_steps=4 format=3 uid="uid://b8e14ykg88vyd"]

[ext_resource type="Script" path="res://singletons/gui.gd" id="1_6pff1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_4d7cv"]

[sub_resource type="LabelSettings" id="LabelSettings_idbx0"]
font_size = 10

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 18.0
offset_right = -20.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pff1")
color_low = Color(0.74902, 0.203922, 0.203922, 1)
color_high = Color(0.301961, 0.952941, 0.301961, 1)

[node name="Weapon" type="Label" parent="."]
layout_mode = 0
offset_top = 58.0
offset_right = 171.0
offset_bottom = 84.0
text = "Weapon"

[node name="HealthBar" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 20.0

[node name="EnergyBar" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 31.0
offset_right = 200.0
offset_bottom = 51.0
color = Color(0.121569, 0.92549, 1, 1)

[node name="KillCounter" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 28.0
offset_bottom = 54.0
grow_horizontal = 0
text = "Kills"
horizontal_alignment = 2

[node name="Minimap" type="TextureRect" parent="."]
z_index = 1
clip_contents = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
texture = SubResource("ViewportTexture_4d7cv")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -209.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 209.0
grow_horizontal = 0

[node name="InteractionPrompt" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Press E to select"
horizontal_alignment = 1

[node name="InteractionTitle" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 7.5
offset_right = 20.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "Drill"
horizontal_alignment = 1

[node name="InteractionDescription" type="Label" parent="InteractionTitle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 22.5
offset_right = 20.0
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2
text = "Drill"
label_settings = SubResource("LabelSettings_idbx0")
horizontal_alignment = 1

[node name="CorruptionWarning" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "A zone has been corrupted"
horizontal_alignment = 1
vertical_alignment = 1
